# EtherOS

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  grub.cfg
.cargo/: config.toml
asm/: gdt_flush.s  idt_load.s  irq.s  isr.s  paging.s  start.s
src/: framebuffer.rs  lib.rs  link.ld  logger.rs  memory.rs  multiboot.rs
src/arch/i686/: cpuid.rs  gdt.rs  idt.rs  interrupts.rs  mod.rs  pic.rs  registers.rs
src/drv/: cmos.rs  mod.rs  pci.rs
src/io/: mod.rs  ports.rs  serial.rs
src/sys/: syscalls.rs
